# custom-skills

./: .cursorrules  .gitignore  AGENT.md  AGENTS.md  CLI_SPEC.md  DEEPV.md  GUIDELINES.md  Makefile  README.md  WEB_SPEC.md  claude-code-system-prompt-zh.md  custom-skills-hub-prd.md  custom-skills-hub-technical-architecture.md  memory-organizer.skill  package.json  remove_registry.py  skills-lock.json  test.md
.claude/: CLAUDE.md  settings.json
.llm-wiki/: index.md  log.md
agents/: coding-agent.md  intel-agent.md  knowledge-to-deck-agent.md  media-agent.md  vid-publisher-agent.md
analyze-up/: SKILL.md
ask-kb/: SKILL.md
bilibili-video-helper/: SKILL.md
bilibili-vtt-extractor/: SKILL.md
bjtuo-classroom-query/: 2026-2-5 教室实时人数接口文档 132210.md  SKILL.md
build-kb/: SKILL.md
cli/: package-lock.json  package.json
crawl-and-export/: SKILL.md
docs/: README.md  agent-spec.md  architecture.md  cli-prd.md  codebase-review-2026-05-20.md  registry-audit-2026-04-15.md  registry-workflow.md  release-process.md  skill-spec.md  upstream-sync.md  wewe-rss-deployment.md
download-video/: SKILL.md
evals/: README.md
idea-incubator/: SKILL.md
knowledge-skill/: SKILL.md  requirements.txt
skills/douyin-upload/scripts/: cli.py  conf.py  pyproject.toml
skills/douyin-upload/scripts/uploader/: __init__.py
skills/douyin-upload/scripts/uploader/douyin_uploader/: main.py
skills/douyin-upload/scripts/utils/: base_social_media.py  log.py
skills/video-analyze/scripts/video-analyzer/: analyzer_cli.py  extractor.py  pyproject.toml  transcriber.py  whisper_transcriber.py
(+492 files in other folders)
